@@ -64,6 +64,7 @@ nimbleUserNamespace <- as.environment(list(sessionSpecificDll = NULL))
         MCMCmultivariateNodesAsScalars = FALSE,
         MCMCmonitorAllSampledNodes = FALSE,
         MCMCuseConjugacy = TRUE,
+        MCMCjointlySamplePredictiveBranches = TRUE,
         MCMCenableWAIC = FALSE
         
         ## default settings for MCMC samplers
@@ -201,3 +202,4 @@ withNimbleOptions <- function(options, expr) {
     nimbleOptions(options)
     return(expr)
 }
+
